renamed templates to actions
