# server/api/swagger/swagger.yaml
@@ -122,52 +122,52 @@ paths:
       responses:
         "200":
           description: Success            
-  /template:
-    x-swagger-router-controller: template
+  /action:
+    x-swagger-router-controller: action
     get:
-      summary: Get all FIX message templates
-      operationId: getAllTemplates
-      tags : [Template]
+      summary: Get all FIX message actions
+      operationId: getAllActions
+      tags : [Action]
       responses:
         "200":
           description: Success
           schema:
             type: array
             items: 
-              $ref: "#/definitions/TemplateResource"
+              $ref: "#/definitions/ActionResource"
         default:
           description: Error
           schema: 
             $ref: "#/definitions/ErrorResponse"
-  /template/{label}:
-    x-swagger-router-controller: template
+  /action/{label}:
+    x-swagger-router-controller: action
     post:
-      summary: Create a new FIX message template
-      operationId: createTemplate
-      tags : [Template]
+      summary: Create a new FIX message action
+      operationId: createAction
+      tags : [Action]
       parameters:
         - name: label
           in: path
           description: FIX session name 
           required: true
           type: string
-        - name: template
+        - name: action
           in: body
           description: array of keys and formulas
           required: true
           schema:
-            $ref: "#/definitions/TemplateResource"
+            $ref: "#/definitions/ActionResource"
       responses:
         "200":
           description: Success
     delete:
-      summary: Delete a template
-      operationId: deleteTemplate
-      tags : [Template]
+      summary: Delete a action
+      operationId: deleteAction
+      tags : [Action]
       parameters:
         - name: label
           in: path
-          description: Name of the template
+          description: Name of the action
           required: true
           type: string
       responses:
@@ -263,22 +263,22 @@ definitions:
         type: string
       message:
         type: string
-  TemplateItemResource:
-    description: Template Item a key value pair of FIX keys and formulas
+  ActionItemResource:
+    description: Action Item a key value pair of FIX keys and formulas
     properties:
       key:
         type: string
       formula:
         type: string
-  TemplateResource:
-    description: Template
+  ActionResource:
+    description: Action
     properties:
       label: 
         type: string
       pairs:
         type: array
         items: 
-          $ref: "#/definitions/TemplateItemResource"
+          $ref: "#/definitions/ActionItemResource"
   ScenarioResource:
     description: Scenario
     properties:
